# webgpu-christmas-tree

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  webpack.config.js
src/: lib.rs
src/gfx/: mod.rs
src/shaders/: shader.wgsl
static/: index.html
tests/: app.rs
