# You must change these to your own details.
[package]
name = "webgpu-christmas-tree"
description = "WebGPU version of my Christmas Tree"
version = "0.1.0"
authors = ["Jacek Bilski <jacek@bilski.tech>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.86"
winit = "0.28.6"
wgpu = { version = "0.16.1", features = [ "webgl" ] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.36"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.63"
features = [
    "console",
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.36"
futures = "0.3.28"
js-sys = "0.3.63"
